--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -50,11 +50,13 @@
 
 // COMPONENTS
 @import "ember-appuniversum/c-alert";
+@import "ember-appuniversum/c-badge";
 @import "ember-appuniversum/c-brand";
 @import "ember-appuniversum/c-button";
 @import "ember-appuniversum/c-button-group";
 @import "ember-appuniversum/c-card";
 @import "ember-appuniversum/c-content";
+@import "ember-appuniversum/c-content-header";
 @import "ember-appuniversum/c-heading";
 @import "ember-appuniversum/c-help-text";
 @import "ember-appuniversum/c-icon";
