--- a/app/templates/experience/show/tree/tree-node.hbs
+++ b/app/templates/experience/show/tree/tree-node.hbs
@@ -27,7 +27,7 @@
   <div class="au-o-box au-c-action-sidebar__footer">
     <AuButtonGroup>
       <AuButton>Opslaan</AuButton>
-      <AuButton @skin="secondary">Annuleer</AuButton>
+      <AuButton @skin="secondary">Sluit</AuButton>
     </AuButtonGroup>
 
   </div>
