--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -28,6 +28,11 @@
     </AuToolbarGroup>
   </AuToolbar>
   <div class="au-o-box">
+
+    {{!-- <article class="au-o-box au-o-box--small au-c-card au-c-card--link au-u-margin-bottom">
+      <a href="#!" class="au-c-link au-c-link--secondary au-c-card__link"> Gebouw</a>
+    </article> --}}
+
     {{outlet}}
   </div>
 </div>
