--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -27,7 +27,7 @@
         <div class="au-o-grid au-o-grid--small">
           <div class="au-o-grid__item au-u-1-2@small au-u-1-3@medium">
             <AuCard class="au-u-text-center">
-              <AuBadge @icon="search-folder" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuBadge @icon="users" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="2" @skin="4">
                   Widget
@@ -42,7 +42,7 @@
           </div>
           <div class="au-o-grid__item au-u-1-2@small au-u-1-3@medium">
             <AuCard class="au-u-text-center">
-              <AuBadge @icon="message" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="2" @skin="4">
                   API
@@ -57,7 +57,7 @@
           </div>
           <div class="au-o-grid__item au-u-1-2@small au-u-1-3@medium">
             <AuCard class="au-u-text-center">
-              <AuBadge @icon="document" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuBadge @icon="pencil" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="2" @skin="4">
                   Data ingave
