hide no event button

--- a/app/templates/poi/show/experiences/index.hbs
+++ b/app/templates/poi/show/experiences/index.hbs
@@ -1,4 +1,4 @@
-<AuToolbar class="au-u-padding-top au-u-margin-bottom" @border="top">
+<AuToolbar class="au-u-margin-bottom">
   <AuToolbarGroup>
     <AuHeading @level="2" @skin="3">
       Events
