--- a/app/templates/poi/show/experiences/new.hbs
+++ b/app/templates/poi/show/experiences/new.hbs
@@ -1,4 +1,4 @@
-<AuToolbar class="au-u-padding-top au-u-margin-bottom" @border="top">
+<AuToolbar class="au-u-margin-bottom">
   <AuToolbarGroup>
     <AuHeading @level="2" @skin="3">
       Nieuw event
@@ -46,7 +46,7 @@
     <AuToolbarGroup class="au-c-toolbar__group--row">
       <LinkTo class="au-c-link au-c-link--secondary" @route="poi.show.experiences.index" @model={{this.poi}}>
         <AuIcon @icon="arrow-left" @alignment="left" />
-        Terug naar de locatie
+        Terug naar alle events
       </LinkTo>
     </AuToolbarGroup>
   </AuToolbar>
