--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -28,10 +28,10 @@
     </AuToolbarGroup>
   </AuToolbar>
   <div class="au-o-box">
-
+{{!--
     <article class="au-o-box au-o-box--small au-c-card au-c-card--link au-u-margin-bottom">
       <LinkTo class="au-c-link au-c-link--secondary au-c-card__link" @route="experience.show.tree" @model={{@model}}> Gebouw</LinkTo>
-    </article>
+    </article> --}}
 
     {{outlet}}
   </div>
