--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -83,10 +83,10 @@
       <p>Uitgegeven door <a class="au-c-link" href="https://www.vlaanderen.be/organisaties/administratieve-diensten-van-de-vlaamse-overheid/beleidsdomein-kanselarij-en-bestuur/toegankelijk-vlaanderen">Agentschap Toegankelijk Vlaanderen</a></p>
       <ul class="au-c-list-horizontal">
         <li class="au-c-list-horizontal__item">
-          <AuLink @linkRoute="login" @skin="secondary">Disclaimer</AuLink>
+          <AuLink @linkRoute="legal.disclaimer" @skin="secondary">Disclaimer</AuLink>
         </li>
         <li class="au-c-list-horizontal__item">
-          <AuLink @linkRoute="login" @skin="secondary">Cookieverklaring</AuLink>
+          <AuLink @linkRoute="legal.cookiestatement" @skin="secondary">Cookieverklaring</AuLink>
         </li>
       </ul>
     </AuContent>
