--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -45,3 +45,43 @@
     text-align: right;
   }
 }
+
+// Info text
+.au-c-info-text {
+  @include au-font-size($au-base);
+  font-family: $au-font;
+  font-weight: $au-regular;
+  color: $au-gray-600;
+}
+
+// Close button
+.au-c-close {
+  position: absolute;
+  appearance: none;
+  border: 0;
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
+  top: $au-unit-small;
+  right: $au-unit-small;
+  color: $au-gray-700;
+
+  &:hover {
+    color: $au-gray-600;
+  }
+
+  &:focus {
+    outline: $au-outline;
+  }
+}
+
+.au-c-close--large {
+  top: $au-unit;
+  right: $au-unit;
+}
+
+.au-c-form {
+  > * + * {
+    margin-top: $au-unit-small;
+  }
+}
