--- a/app/templates/experience/edit/tree-node.hbs
+++ b/app/templates/experience/edit/tree-node.hbs
@@ -1,24 +1,35 @@
-<h3>We are editing the scoring for {{@model.treeNode.title}}</h3>
+<div class="au-c-action-sidebar">
+  <div class="au-o-box au-c-action-sidebar__header">
+    <AuHeading @level="4" @skin="3">
+      {{@model.treeNode.title}}
+    </AuHeading>
+    <p class="au-c-info-text"><strong>Tree node:</strong> {{@model.treeNode.uri}}</p>
+    <p class="au-c-info-text"><strong>Edit type:</strong> {{this.extendedEditInfo.component}}</p>
 
-<p>
-  <dl>
-    <dt>Tree node</dt><dd>{{@model.treeNode.uri}}</dd>
-    <dt>Edit component</dt><dd>{{this.extendedEditInfo.component}}</dd>
-  </dl>
-</p>
+    <LinkTo @route="experience.show.tree" @model={{@model.treeNode.id}} class="au-c-close au-c-close--large">
+      <AuIcon @icon="cross" @size="large" />
+      <span class="au-u-hidden-visually">Sluiten</span>
+    </LinkTo>
+  </div>
 
-<form {{on "submit" this.submit}}>
-  <label>Score
-    <Input @value={{this.currentScore}} @placeholder="Brons" />
-  </label>
-  <button type="submit" {{on "click" this.submit}}>Set</button>
-</form>
+  <div class="au-o-box au-c-sidebar__content">
+    {{#if this.extendedEditInfo}}
+      {{component this.extendedEditInfo.component
+          key=this.extendedEditInfo.key
+          treeNode=@model.treeNode
+          experience=@model.experience}}
+    {{/if}}
 
-{{#if this.extendedEditInfo}}
-  {{component this.extendedEditInfo.component
-      key=this.extendedEditInfo.key
-      treeNode=@model.treeNode
-      experience=@model.experience}}
-{{/if}}
+    {{outlet}}
 
-{{outlet}}
+    <form {{on "submit" this.submit}} class="au-c-form">
+      <p>
+        <AuLabel for="score">Score</AuLabel>
+        <AuInput id="score" @value={{this.currentScore}} @placeholder="Brons" />
+      </p>
+      <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
+    </form>
+
+
+  </div>
+</div>
