--- a/app/components/edit-components/string.hbs
+++ b/app/components/edit-components/string.hbs
@@ -1,16 +1,21 @@
 <WithStatechart @state={{this.statechart}} as |chart|>
   <chart.if @state="init">
-    ...
+     <AuLoader />
   </chart.if>
   <chart.if @state="dataEntry">
     <form {{on "submit" (fn chart.preventAndSend "SAVE")}}>
-      <Input @value={{this.currentValue}} />
-      <button type="submit">save</button>
+      <p class="au-u-margin-bottom-small">
+        <AuLabel for="string">Geef een opmerking in.</AuLabel>
+        <Input id="string" @value={{this.currentValue}} class="au-c-input au-c-input--block" />
+      </p>
+      <AuButton type="submit">Opslaan</AuButton>
     </form>
   </chart.if>
   <chart.if @state="saving">
-    <Input @value={{this.currentValue}} disabled/>
-
-    <button disabled type="button">save</button> ...
+    <p class="au-u-margin-bottom-small">
+      <AuLabel for="string">Geef een opmerking in.</AuLabel>
+      <Input id="string" @value={{this.currentValue}} class="au-c-input au-c-input--block" disabled/>
+    </p>
+    <AuButton @loading="true">Opslaan</AuButton>
   </chart.if>
 </WithStatechart>
