--- a/app/templates/experience/edit/tree-node.hbs
+++ b/app/templates/experience/edit/tree-node.hbs
@@ -22,6 +22,8 @@
 
     {{outlet}}
 
+    <hr class="au-c-hr">
+
     <form {{on "submit" this.submit}} class="au-c-form">
       <p>
         <AuLabel for="score">Score</AuLabel>
