--- a/app/components/edit-components/count.hbs
+++ b/app/components/edit-components/count.hbs
@@ -1,15 +1,19 @@
 <WithStatechart @state={{this.statechart}} as |chart|>
   <chart.if @state="init">
-    ...
+     <AuLoader />
   </chart.if>
   <chart.if @state="dataEntry">
-    <Input @value={{this.currentValue}} @type="number" />
-
-    <button {{on "click" (fn chart.preventAndSend "SAVE")}} type="button">save</button>
+    <p class="au-u-margin-bottom-small">
+      <AuLabel for="count">Geef een hoeveelheid in.</AuLabel>
+      <Input id="count" @value={{this.currentValue}} @type="number" class="au-c-input" />
+    </p>
+    <AuButton {{on "click" (fn chart.preventAndSend "SAVE")}} type="button">Opslaan</AuButton>
   </chart.if>
   <chart.if @state="saving">
-    <Input @value={{this.currentValue}} @type="number" />
-
-    <button disabled type="button">save</button> ...
+    <p class="au-u-margin-bottom-small">
+      <AuLabel for="count">Geef een hoeveelheid in.</AuLabel>
+      <Input id="count" @value={{this.currentValue}} @type="number" class="au-c-input" disabled/>
+    </p>
+    <AuButton @loading="true">Opslaan</AuButton>
   </chart.if>
 </WithStatechart>
