--- a/app/components/edit-components/electronic-payment-system-movable.hbs
+++ b/app/components/edit-components/electronic-payment-system-movable.hbs
@@ -1,5 +1,15 @@
-<Input @checked={{this.movablePaymentSystem}} @type="checkbox" />
+<p class="au-u-margin-bottom-tiny">
+  <AuLabel for="movablePaymentSystem">Is deze eigenschap aanwezig?</AuLabel>
+  <label class="au-c-toggle">
+    <Input id="movablePaymentSystem" @checked={{this.movablePaymentSystem}} @type="checkbox" class="input-checkbox" />
+    <span class="au-c-toggle__elements">
+      <span class="au-c-toggle__switch"></span>
+      <span class="au-c-toggle__on-value">Ja</span>
+      <span class="au-c-toggle__off-value">Nee</span>
+    </span>
+  </label>
+</p>
 
-<button {{on "click" this.save}}>save</button>
+<AuButton {{on "click" this.save}} type="button">Opslaan</AuButton>
 
 {{yield}}
