--- a/app/components/edit-components/meters.hbs
+++ b/app/components/edit-components/meters.hbs
@@ -1,15 +1,19 @@
 <WithStatechart @state={{this.statechart}} as |chart|>
   <chart.if @state="init">
-    ...
+     <AuLoader />
   </chart.if>
   <chart.if @state="dataEntry">
-    <Input @value={{this.currentValue}} @type="number" /> m
-
-    <button {{on "click" (fn chart.preventAndSend "SAVE")}} type="button">save</button>
+    <p class="au-u-margin-bottom-small">
+      <AuLabel for="meters">Geef een waarde in m.</AuLabel>
+      <Input id="meters" @value={{this.currentValue}} @type="number" class="au-c-input" /> <span class="au-u-margin-left-tiny au-c-info-text">m</span>
+    </p>
+    <AuButton {{on "click" (fn chart.preventAndSend "SAVE")}} type="button">Opslaan</AuButton>
   </chart.if>
   <chart.if @state="saving">
-    <Input @value={{this.currentValue}} @type="number" /> m
-
-    <button disabled type="button">save</button> ...
+    <p class="au-u-margin-bottom-small">
+      <AuLabel for="meters">Geef een waarde in m.</AuLabel>
+      <Input id="meters" @value={{this.currentValue}} @type="number" class="au-c-input" disabled/> <span class="au-u-margin-left-tiny au-c-info-text">m</span>
+    </p>
+    <AuButton @loading="true">Opslaan</AuButton>
   </chart.if>
 </WithStatechart>
