--- a/app/templates/experience/show/tree/tree-node.hbs
+++ b/app/templates/experience/show/tree/tree-node.hbs
@@ -1,16 +1,22 @@
 <div class="au-c-action-sidebar">
   <div class="au-o-box au-c-action-sidebar__header">
     <AuHeading @level="4" @skin="3">
-      Eigen parkeerterrein {{@model.treeNode.title}}
+      Eigen parkeerterrein
     </AuHeading>
+    <p class="au-c-info-text"><strong>Tree node:</strong> ...</p>
+    <p class="au-c-info-text"><strong>Edit type:</strong> ...</p>
+
+    <LinkTo @route="experience.show.tree" @model={{@model.experience.id}} class="au-c-close au-c-close--large">
+      <AuIcon @icon="cross" @size="large" />
+      <span class="au-u-hidden-visually">Sluiten</span>
+    </LinkTo>
   </div>
 
   <div class="au-o-box au-c-sidebar__content">
     {{outlet}}
 
     <form action="">
-      <AuLabel for="toggle1">Is er een eigen parkeerterrein aanwezig?</AuLabel>
-
+      <AuLabel for="toggle1">Is deze eigenschap aanwezig?</AuLabel>
       <label class="au-c-toggle">
         <input id="toggle1" class="input-checkbox" name="toggle1"  type="checkbox" checked>
         <span class="au-c-toggle__elements">
@@ -19,16 +25,6 @@
           <span class="au-c-toggle__off-value">Nee</span>
         </span>
       </label>
-
-
-      <AuHelpText>Geef aan of dit criterium voldaan is of niet.</AuHelpText>
     </form>
-  </div>
-  <div class="au-o-box au-c-action-sidebar__footer">
-    <AuButtonGroup>
-      <AuButton>Opslaan</AuButton>
-      <AuButton @skin="secondary">Sluit</AuButton>
-    </AuButtonGroup>
-
   </div>
 </div>
