--- a/app/templates/legal/cookiestatement.hbs
+++ b/app/templates/legal/cookiestatement.hbs
@@ -1,20 +1,20 @@
 <AuContent>
   <AuHeading>Cookieverklaring</AuHeading>
-  <h2 class="h2">Cookiebeleid van Agentschap Binnenlands Bestuur</h2>
-  <p>Agentschap Binnenlands Bestuur met maatschappelijke zetel te Havenlaan 88, 1000 Brussel is verantwoordelijk voor dit cookiebeleid. Agentschap Binnenlands Bestuur vindt het belangrijk dat u op iedere plaats en elk ogenblik haar content kan bekijken, beluisteren, lezen of beleven via diverse mediaplatformen. Agentschap Binnenlands Bestuur wil ook werken aan interactieve diensten en diensten op uw maat. Op Agentschap Binnenlands Bestuur-onlinediensten worden technieken gehanteerd om dit mogelijk te maken, bijvoorbeeld met behulp van cookies&nbsp;en&nbsp;scripts. Deze technieken worden hierna gemakelijkheidshalve cookies genoemd.</p>
-  <p>In dit cookiebeleid wenst Agentschap Binnenlands Bestuur u te informeren welke cookies worden gebruikt en waarom dit gebeurt. Verder wordt toegelicht in welke mate u als gebruiker het gebruik kan controleren. Agentschap Binnenlands Bestuur wil namelijk graag uw privacy en de gebruiksvriendelijkheid van haar onlinediensten zoveel mogelijk waarborgen. Agentschap Binnenlands Bestuur heeft geprobeerd dit beleid zo eenvoudig mogelijk te houden.</p>
-  <p>Agentschap Binnenlands Bestuur kan het cookiebeleid&nbsp;op elk moment veranderen. Dat kan bijvoorbeeld gebeuren in het kader van veranderingen aan haar diensten of de geldende wetgeving. Het gewijzigde beleid wordt dan bekendgemaakt op de relevante Agentschap Binnenlands Bestuur-onlinediensten en gelden vanaf het moment dat deze bekendgemaakt wordt.&nbsp;</p>
+  <h2>Cookiebeleid van Agentschap Toegankelijk Vlaanderen</h2>
+  <p>Agentschap Toegankelijk Vlaanderen met maatschappelijke zetel te Belgiëplein 1, 3510 Hasselt is verantwoordelijk voor dit cookiebeleid. Agentschap Toegankelijk Vlaanderen vindt het belangrijk dat u op iedere plaats en elk ogenblik haar content kan bekijken, beluisteren, lezen of beleven via diverse mediaplatformen. Agentschap Toegankelijk Vlaanderen wil ook werken aan interactieve diensten en diensten op uw maat. Op Agentschap Toegankelijk Vlaanderen-onlinediensten worden technieken gehanteerd om dit mogelijk te maken, bijvoorbeeld met behulp van cookies&nbsp;en&nbsp;scripts. Deze technieken worden hierna gemakelijkheidshalve cookies genoemd.</p>
+  <p>In dit cookiebeleid wenst Agentschap Toegankelijk Vlaanderen u te informeren welke cookies worden gebruikt en waarom dit gebeurt. Verder wordt toegelicht in welke mate u als gebruiker het gebruik kan controleren. Agentschap Toegankelijk Vlaanderen wil namelijk graag uw privacy en de gebruiksvriendelijkheid van haar onlinediensten zoveel mogelijk waarborgen. Agentschap Toegankelijk Vlaanderen heeft geprobeerd dit beleid zo eenvoudig mogelijk te houden.</p>
+  <p>Agentschap Toegankelijk Vlaanderen kan het cookiebeleid&nbsp;op elk moment veranderen. Dat kan bijvoorbeeld gebeuren in het kader van veranderingen aan haar diensten of de geldende wetgeving. Het gewijzigde beleid wordt dan bekendgemaakt op de relevante Agentschap Toegankelijk Vlaanderen-onlinediensten en gelden vanaf het moment dat deze bekendgemaakt wordt.&nbsp;</p>
   <h3>Wat zijn cookies precies?</h3>
   <p>Cookies zijn kleine gegevens- of tekstbestanden die op uw computer of mobiele apparaat zijn geïnstalleerd wanneer u een website bezoekt of een (mobiele) toepassing gebruikt. Het cookiebestand bevat een unieke code waarmee u uw browser kunt herkennen tijdens het bezoek aan de online service of tijdens opeenvolgende, herhaalde bezoeken. Cookies kunnen worden geplaatst door de server van de website of applicatie die u bezoekt, maar ook door servers van derden die al dan niet met deze website of applicatie samenwerken.</p>
   <p>Cookies maken over het algemeen de interactie tussen de bezoeker en de website of applicatie gemakkelijker en sneller en helpen de bezoeker om te navigeren tussen de verschillende delen van een website of applicatie.</p>
-  <h3 class="h3">Hoe kan u het gebruik van cookies weigeren of beheren?</h3>
+  <h3>Hoe kan u het gebruik van cookies weigeren of beheren?</h3>
   <p>U kunt de installatie van cookies weigeren via uw browserinstellingen. U kunt op elk gewenst moment ook de reeds geïnstalleerde cookies van uw computer of mobiele apparaat verwijderen, als volgt:</p>
   <ul><li>Internet Explorer: https://support.microsoft.com/nl-be/help/17479/windows-internet-explorer-11-change-security-privacy-settings&nbsp;</li>
     <li>Chrome:&nbsp;http://support.google.com/chrome/bin/answer.py?hl=nl&amp;answer=95647&nbsp;</li>
     <li>Firefox:&nbsp;http://support.mozilla.org/nl/kb/cookies-in-en-uitschakelen-websites-voorkeuren?redirectlocale=nl&amp;redirectslug=Cookies+in-+en+uitschakelen&nbsp;</li>
     <li>Safari:&nbsp;http://support.apple.com/kb/PH5042&nbsp;</li>
   </ul><p>Wanneer u cookies uitschakelt, moet u er rekening mee houden dat bepaalde grafische elementen er misschien niet mooi uitzien, of dat u bepaalde toepassingen niet kunt gebruiken. Hieronder vindt u een gedetailleerde lijst van de soorten cookies die op de website gebruikt worden.</p>
-  <h3 class="h3">Gebruikte cookies</h3>
+  <h3>Gebruikte cookies</h3>
   <ul>
     <li>Sessiebeheer
       <ul><li>Naam van cookie: proxy_session</li>
