--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -21,7 +21,7 @@
       </div>
     </section>
 
-    <section class="au-o-region-large region--alt">
+    <section class="au-o-region-large au-c-theme-gray-200">
       <div class="au-o-layout">
         <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Toevla widget en data entry</AuHeading>
         <div class="au-o-grid au-o-grid--small">
