--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -5,7 +5,7 @@
     </AuHeading>
   </AuToolbarGroup>
 </AuToolbar>
-<div class="au-c-body-container au-c-body-container--scroll au-c-theme-background">
+<div class="au-c-body-container au-c-body-container--scroll au-c-theme-gray-100">
   <div class="au-o-grid au-o-grid--flush au-o-grid--fixed">
     <div class="au-o-grid__item au-u-3-5 au-u-2-3@medium">
       <ul class="au-c-tree">
