--- a/app/templates/experience/show/tree/tree-node.hbs
+++ b/app/templates/experience/show/tree/tree-node.hbs
@@ -6,7 +6,7 @@
     <p class="au-c-info-text"><strong>Tree node:</strong> ...</p>
     <p class="au-c-info-text"><strong>Edit type:</strong> ...</p>
 
-    <LinkTo @route="experience.show.tree" @model={{@model.experience.id}} class="au-c-close au-c-close--large">
+   <LinkTo @route="experience.show.tree" @model={{@model.experience}} class="au-c-close au-c-close--large">
       <AuIcon @icon="cross" @size="large" />
       <span class="au-u-hidden-visually">Sluiten</span>
     </LinkTo>
