Smarter resetting of edit components
Edit components can now more intelligently reset their state.  This
means that going from one similar component to another, both of which
loaded previously, will correctly reset the values without causing
flicker.

--- a/app/components/edit-components/area.hbs
+++ b/app/components/edit-components/area.hbs
@@ -1,6 +1,7 @@
 <WithStatechart @state={{this.statechart}} as |chart|>
+  {{yield (hash reset=(fn chart.send "RESET"))}}
   <chart.if @state="init">
-     <AuLoader />
+    <AuLoader />
   </chart.if>
   <chart.if @state="dataEntry">
     <form {{on "submit" (fn chart.preventAndSend "SAVE")}}>
