--- a/app/components/with-statechart.hbs
+++ b/app/components/with-statechart.hbs
@@ -2,6 +2,6 @@
     (hash
     state=this.stateName
     send=this.send
-    preventAndSend=this.send
+    preventAndSend=this.preventAndSend
     if=(component "with-statechart/if" currentState=this.stateName)
     )}}
