--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -14,12 +14,12 @@
 
   <div class="au-o-box au-c-sidebar__content">
     {{#if this.extendedEditInfo}}
-      {{#if this.showComponent}}
-        {{component this.extendedEditInfo.component
-            key=this.extendedEditInfo.key
-            treeNode=@model.treeNode
-            experience=@model.experience}}
-      {{/if}}
+      {{#component this.extendedEditInfo.component
+           key=this.extendedEditInfo.key
+           treeNode=@model.treeNode
+           experience=@model.experience as |events|}}
+        <span {{did-update events.reset @model.treeNode}}></span>
+      {{/component}}
     {{/if}}
 
     {{outlet}}
@@ -33,7 +33,5 @@
       </p>
       <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
-
-
   </div>
 </div>
