A first PoC to show we can render trees with experiences
The current implementation overrides the name of a node.  I doubt that
is the prettiest way to handle this case and I think we should
consider an alternative approach in which we copy-over or abstract the
state machine which handles the opening, closing and loading of the
parts of the tree.

I did not check if there already is some code duplication or not.  If
it is currently there it would make sense to further abstract.

--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -10,9 +10,7 @@
     <div class="au-o-grid__item au-u-3-5 au-u-2-3@medium">
       <ul class="au-c-tree">
         {{#each this.sortedNodes as |node|}}
-        <li class="au-c-tree__item">
-          <Tree::Node @node={{node}} @experience={{this.experience}} />
-        </li>
+          <Tree::Node @node={{node}} @experience={{this.experience}} class="au-c-tree__item" />
         {{/each}}
       </ul>
     </div>
