--- a/app/components/tree-components/circulation.hbs
+++ b/app/components/tree-components/circulation.hbs
@@ -1,17 +1,14 @@
 {{#each @experience.pointOfInterest.experiences as |experience|}}
-  {{#if this.realNode}}
-    <Tree::Node
-      @node={{this.realNode}}
-      @experience={{experience}}
-      @title={{concat "Circuleren - " experience.title}}
-      class="au-c-tree__item au-c-tree__item--child">
+  <TreeComponents::Circulation::SingleNode
+    @node={{@node}}
+    @experience={{experience}}
+    @title={{concat "Circuleren - " experience.title}}
+    class="au-c-tree__item au-c-tree__item--child">
 
-      <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array @experience.id child.id}}>
-        <AuIcon @icon="pencil" />
-        <span class="au-c-tree__edit-label">Aanpassen</span>
-      </LinkTo>
-    </Tree::Node>
-  {{else}}
-    ...
-  {{/if}}
+    <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array @experience.id child.id}}>
+      <AuIcon @icon="pencil" />
+      <span class="au-c-tree__edit-label">Aanpassen</span>
+    </LinkTo>
+
+  </TreeComponents::Circulation::SingleNode>
 {{/each}}
