DRY allowing handlerComponent to be disabled in Tree::Node
The circulation renders one entry for each experience.  By allowing
the skipping of the handler, we can more easily render the full tree
without additions.  Not sure if this should be thorn off another way,
but it works and does not contain too much code for now.

--- a/app/components/tree-components/circulation.hbs
+++ b/app/components/tree-components/circulation.hbs
@@ -1,8 +1,9 @@
 {{#each @experience.pointOfInterest.experiences as |experience|}}
-  <TreeComponents::Circulation::SingleNode
+  <Tree::Node
     @node={{@node}}
     @experience={{experience}}
     @title={{concat "Circuleren - " experience.title}}
+    @disableHandlerComponent={{true}}
     class="au-c-tree__item au-c-tree__item--child">
 
     <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array @experience.id child.id}}>
@@ -10,5 +11,5 @@
       <span class="au-c-tree__edit-label">Aanpassen</span>
     </LinkTo>
 
-  </TreeComponents::Circulation::SingleNode>
+  </Tree::Node>
 {{/each}}
